<resources>
    <string name="app_name">龙门镖局</string>
    <string name="welcome">Welcome!</string>
    <string name="home">主页</string>
    <string name="get">代取</string>
    <string name="post">代寄</string>
    <string name="me">我的</string>
    <string name="search_qryHint">搜索订单</string>
    <string name="want_to_get">我要取快递</string>
    <string name="want_to_post">我要寄快递</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="code">Code</string>
    <string name="phone">Phone</string>
    <string name="get_code">Get code</string>
    <string name="login">Login</string>
    <string name="publish_message">publish message</string>
    <string name="phone_num_cannot_be_empty">Phone number cannot be empty</string>
    <string name="code_cannot_be_empty">Code cannot be empty</string>
    <string name="fail_to_get_code">Fail to get code</string>
    <string name="fail_to_login">Fail to login, please try later</string>
    <string name="fail_to_load_timeline_data">Fail to load messages,please try later</string>
    <string name="suc_to_get_code">Succeed to get code, please check your short message</string>
    <string name = "connecting">Connecting</string>
    <string name = "connecting_to_server">Connecting to server, please wait</string>
</resources>
