<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp" >

    <RelativeLayout
        android:id="@+id/usr_icon"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:id="@+id/head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/head"
            android:layout_gravity="center_vertical"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/usr_icon">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/phone"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <EditText
            android:id="@+id/etPhoneNum"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/phone"/>

        <Button
            android:id="@+id/btnGetCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/get_code"
            android:layout_toRightOf="@id/etPhoneNum"
            android:layout_alignParentRight="true"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:background="@drawable/check_border"
            />
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_below="@id/linearlayout1">

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/code"-->
            <!--android:textAppearance="?android:attr/textAppearanceLarge" />-->

        <EditText
            android:id="@+id/etCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:singleLine="true"
            android:layout_margin="20dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:hint="@string/code"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@id/linearlayout2"
        android:gravity="center"
        >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_margin="20dp"
            android:textSize="25dp"
            android:textColor="#fff"
            android:background="@drawable/check_border"
            />
    </LinearLayout>

</RelativeLayout>