<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">


        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_margin="5dp"
            android:background="@drawable/searchview_line"
            android:gravity="center"
            android:queryHint="@string/search_qryHint"
            android:textSize="18sp" />

        <!--<android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            />-->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:src="@drawable/banner2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <Button
                android:id="@+id/get_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:background="@drawable/check_border"
                android:gravity="center"
                android:text="@string/want_to_get"
                android:textColor="#ffffff"
                android:textSize="27dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dip"
                android:layout_weight="1"
                android:background="@drawable/check_border"
                android:gravity="center"
                android:text="@string/want_to_post"
                android:textColor="#ffffff"
                android:textSize="27dp" />

        </LinearLayout>

        <include
            android:id="@+id/test1"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test2"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test3"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test4"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test5"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test6"
            layout="@layout/test_layout" />

        <include
            android:id="@+id/test7"
            layout="@layout/test_layout" />

    </LinearLayout>

</ScrollView>
